# simulink-capi

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  comment.py
.circleci/: config.yml
cmake/: FetchDeps.cmake
include/: AccessorHelper.hpp  BusBuilder.hpp  CMakeLists.txt  CapiAccessor.hpp  CapiError.hpp  ModelTraits.hpp
src/: Accessor.hpp  AccessorHelper.hpp  CapiAccessor.hpp  Parameter.hpp  join.hpp  main.cpp  split.hpp
test/: CMakeLists.txt  TestBusBuilder.cpp  TestCapiAccessor.cpp  TestCapiAccessorBase.cpp  TestCapiAccessorBase.hpp  TestCapiAccessorNoExceptions.cpp  TestCapiAccessorRef.cpp
test/Controller/: CMakeLists.txt  License-Notes.md  README.md
test/Controller/ec-tlc-playground/Controller_ert_rtw/: Controller.c  Controller.h  Controller_capi.c  Controller_capi.h  Controller_capi_host.h  Controller_data.c  Controller_private.h  Controller_types.h
test/Controller/ec-tlc-playground/slprj/ert/ControllerRef/: ControllerRef.c  ControllerRef.h  ControllerRef_capi.c  ControllerRef_capi.h  ControllerRef_capi_host.h  ControllerRef_private.h  ControllerRef_types.h
test/Controller/ec-tlc-playground/slprj/ert/ControllerRefRef/: ControllerRefRef.c  ControllerRefRef.h  ControllerRefRef_capi.c  ControllerRefRef_capi.h  ControllerRefRef_capi_host.h  ControllerRefRef_private.h  ControllerRefRef_types.h
test/Controller/ec-tlc-playground/slprj/ert/_sharedutils/: builtin_typeid_types.h  rt_defines.h  rtwtypes.h
